fix for text boxes on mobile safari

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -124,6 +124,7 @@ textarea.materialize-textarea {
   background-color: transparent;
   border: none;
   border-bottom: 1px solid $input-border-color;
+  border-radius: 0px;
   outline: none;
   height: 3rem;
   width: 100%;
